--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,28 @@ body {
   font-weight: 300;
 }
 
+.ContacInfo {
+  padding-top: 40px;
+}
+
+.title {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+
+.ContacInfo ul {
+  position: relative;
+}
+.ContacInfo ul li {
+  position: relative;
+  list-style: none;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
 .container .rigth_side {
   position: relative;
   background: #fff;
