--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   font-family: "poppins" sans-serif;
 }
 body {
-  background: lightblue;
+  background: rgb(173, 216, 230);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,6 +90,35 @@ body {
   list-style: none;
   margin: 10px 0;
   cursor: pointer;
+}
+
+.ContacInfo ul li .icon {
+  display: inline-block;
+  width: 30px;
+  font-size: 18px;
+  color: #03a9f4;
+}
+
+.ContacInfo ul li span {
+  color: #fff;
+  font-weight: 300;
+}
+
+.contacInfoeducation li {
+  margin-bottom: 15px;
+}
+.contacInfoeducation h5 {
+  color: #03a9f4;
+  font-weight: 500;
+}
+
+.contacInfoeducation h4 {
+  color: #fff;
+  font-weight: 500;
+}
+.contacInfoeducation h4 {
+  color: #fff;
+  font-weight: 300;
 }
 
 .container .rigth_side {
