--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   font-family: "poppins" sans-serif;
 }
 body {
-  background: rgb(173, 216, 230);
+  background: rgb(46, 199, 250);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,23 +104,42 @@ body {
   font-weight: 300;
 }
 
-.contacInfoeducation li {
+.contacInfo.education li {
   margin-bottom: 15px;
 }
-.contacInfoeducation h5 {
+.contacInfo.education h5 {
   color: #03a9f4;
   font-weight: 500;
 }
 
-.contacInfoeducation h4 {
+.contacInfo.education h4 {
   color: #fff;
   font-weight: 500;
 }
-.contacInfoeducation h4 {
+.contacInfo.education h4 {
   color: #fff;
-  font-weight: 300;
+  font-weight: 500;
 }
 
+.contacInfo.lenguajes .text {
+  color: #fff;
+}
+.contacInfo.lenguajes .percent {
+  position: relative;
+  width: 100%;
+  height: 6px;
+  background: #081921;
+  display: block;
+  margin-top: 5px;
+}
+
+.contacInfo.lenguajes .percent div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+}
 .container .rigth_side {
   position: relative;
   background: #fff;
