--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,44 @@ body {
   background: #fff;
   padding: 40px;
 }
+
+.about {
+  margin-bottom: 50px;
+}
+
+.about last-child {
+  margin-bottom: 0;
+}
+
+.title2 {
+  color: #003147;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
+
+p {
+  color: #333;
+}
+
+.about .box {
+  margin: 16px 0;
+  color: #003147;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
+
+.about .box .year_company {
+  min-width: 150px;
+}
+
+.about .box .year_company h5 {
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 600;
+}
+.about .box .year_company h4 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+}
