--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,25 @@ p {
   color: #2a7da2;
   font-size: 16px;
 }
+
+.skills .box {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills .box h4 {
+  text-transform: uppercase;
+  color: blueviolet;
+  font-weight: 500;
+}
+
+.skills .box .percent {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  background: #f00;
+}
